--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -39,13 +39,68 @@ header p {
 header .navbar {
   position: absolute;
   top: 20px;
-  right: 20px;
+/*  left: 20px;*/
   font-family: 'Montserrat', sans-serif;
   font-size: 18px;
   color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
-header .navbar a {
+.search-container {
+  position: relative;
+  width: 300px;
+}
+
+.search-container input {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 20px;
+  outline: none;
+  font-size: 16px;
+  padding-left: 15px;
+}
+
+.dropdown {
+  position: absolute;
+  width: 100%;
+  border: 1px solid #ccc;
+  border-top: none;
+  background: white;
+  display: none;
+  max-height: 200px;
+  overflow-y: auto;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+.dropdown div {
+  padding: 5px;
+  cursor: pointer;
+}
+.dropdown div:hover {
+  background: #f0f0f0;
+}
+
+.result-item {
+  text-align: left;
+}
+
+.result-item a {
+  color: black;
+  font-size: 12px;
+  text-decoration: none;
+}
+
+.nav-links {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+}
+
+header .nav-links a {
   color: white;
   text-decoration: none;
   margin: 0 15px;
@@ -53,7 +108,7 @@ header .navbar a {
   transition: all 0.3s ease;
 }
 
-header .navbar a:hover {
+header .nav-links a:hover {
   color: #50E3C2;
   transform: scale(1.1);
 }
